part2/ping-pong-app/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dwk-main
  name: dwk-ping-pong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-ping-pong-app
  template:
    metadata:
      labels:
        app: dwk-ping-pong-app
    spec:
      # volumes:
      #   - name: dwk-volume
      #     persistentVolumeClaim:
      #       claimName: dwk-volume-claim
      containers:
        - name: dwk-ping-pong-app
          image: smuliii/dwk-ping-pong-app@sha256:3a2c7eb5a9c8b41a4c055e86a02ac35fdcdb5bb0d1b5fee3b70c2e5846ab239a
          # volumeMounts:
          #   - name: dwk-volume
          #     mountPath: /app/files
