part2/ping-pong-app/manifests/db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: dwk-main
  name: dwk-db-set
spec:
  selector:
    matchLabels:
      app: dwk-db
  serviceName: dwk-db-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: dwk-db
    spec:
      containers:
        - name: dwk-db
          image: postgres:13.4
          ports:
            - containerPort: 5432
              name: db
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
  volumeClaimTemplates:
    - metadata:
        namespace: dwk-main
        name: dwk-db-data-claim
      spec:
        storageClassName: manual
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-main
  name: dwk-db-svc
spec:
  selector:
    app: dwk-db
  clusterIP: None
  ports:
    - port: 5432
