part2/ping-pong-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dwk-ping-pong-app-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-ping-pong-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3002
